--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.85MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 172.99.188.71, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.62MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-6.11MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-691.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-849.7KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-332.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.30MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.11MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
 rules:
