--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-691.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-849.7KB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-332.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.30MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.15MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.58MB/s(Youtube:不良林), server: 134.195.196.149, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: 172.99.188.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇩🇪 德国-955.2KB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-2.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-831.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-370.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-691.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-849.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.15MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.58MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇩🇪 德国-955.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-831.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-370.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
